--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     <!--! header section end-->
 </body>
 </html>
+<p>100xDisney P</p>
 
 <!--! Ana sayfa section start  -->
 <section class="Ana sayfa" id="Ana sayfa">
 </section>
 <!--! Ana sayfa section end  -->
 
-<p>100xDisney Pl</p>
+
 
 
 
