--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--! header section end-->
 </body>
 </html>
-<p>100xDisney P</p>
+<p>100xDisney </p>
 
 <!--! Ana sayfa section start  -->
 <section class="Ana sayfa" id="Ana sayfa">
