--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                 <a href="#">ÜCRETSİZHESAP</a>
             </div>
             <ul>
-                <li><a href="#" class="active">Ana Sayfa</a></li>
+                <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
+                <li><b href="disney.html" class="active">Disney</b></li>
+
             </ul>
         </div>
     </div>
