--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <ul>
                 <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
-                <li><b href="disney.html" class="active">Disney</b></li>
+                <li><a href="disney.html" class="active">Disney</a></li>
 
             </ul>
         </div>
