--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <ul>
                 <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
                 <li><a href="disney.html" class="active">Disney</a></li>
-
             </ul>
         </div>
     </div>
@@ -26,6 +25,8 @@
     <script src="js/script.js"></script>
     <!--! header section end-->
 </body>
+<div><p>iyi forumlar</p></div>
+
 </html>
 
 <!--! Ana sayfa section start  -->
