--- a/anasayfa.html
+++ b/anasayfa.html
@@ -34,3 +34,8 @@
 </section>
 <!--! Ana sayfa section end  -->
 
+<!--! disney section start  -->
+<section class="disney" id="disney">
+</section>
+<!--! disney section end  -->
+
