--- a/index.html
+++ b/index.html
@@ -2,37 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ücretsiz Hesap Paylaşım</title>
+    <title>Ücretsiz Hesap</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--! header section start-->
-<header>
-    <div class="container">
-        <div class="navbar">
-            <div class="dwgames">
-                <a href="#">ÜCRETSİZHESAP</a>
-            </div>
-            <ul>
-                <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
-                <li><a href="disney.html" class="active">Disney</a></li>
-            </ul>
+   <div class="container">
+    <div class="navbar">
+        <div class="ucretsizhesap">
+            <a href="">Ücretsiz Hesap</a>
         </div>
+        <ul>
+            <li><a href="anasayfa.html" class="active"></a>Ana Sayfa</li>
+            <li><a href="disney.html" ></a>Disney</li>
+            <li><a href="netflix.html" ></a>Netflix</li>
+            <li><a href="method.html" ></a>Method</li>
+            <li><a href="karısık.html" ></a>Karışık</li>
+        </ul>
     </div>
-</header>
-    <script src="js/script.js"></script>
-    <!--! header section end-->
+    <div class="center">
+        <h1>Hesap Paylaşım Sitesine Hoşgeldiniz </h1>
+        <h3>Paylaşılan hesaplara sağ üst köşedeki "Disney","Netflix","Method" ve </h3>
+        <h3>daha fazla içerikleri görebilmek için karışık seçeneğine tıklayınız.İYİ FORUMLAR :D</h3>
+    </div>
+   </div>
+
 </body>
 </html>
-
-<!--! Ana sayfa section start  -->
-<section class="Ana sayfa" id="Ana sayfa">
-</section>
-<!--! Ana sayfa section end  -->
-
-
 
 
 
