--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </div>
         <ul>
             <li><a href="anasayfa.html" class="active"></a>Ana Sayfa</li>
-            <li><a href="disney.html" ></a>Disney</li>
-            <li><a href="netflix.html" ></a>Netflix</li>
-            <li><a href="method.html" ></a>Method</li>
-            <li><a href="karısık.html" ></a>Karışık</li>
+            <li><a href="disney.html" class="active"></a>Disney</li>
+            <li><a href="netflix.html" class="active"></a>Netflix</li>
+            <li><a href="method.html" class="active"></a>Method</li>
+            <li><a href="karısık.html" class="active"></a>Karışık</li>
         </ul>
     </div>
     <div class="center">
@@ -28,7 +28,7 @@
    </div>
 
 </body>
-</html>
+</html> 
 
 
 
