--- a/method.html
+++ b/method.html
@@ -1,1 +1,31 @@
-sdfsdf
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ücretsiz Hesap</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+   <div class="container">
+    <div class="navbar">
+        <div class="ucretsizhesap">
+            <a href="">Ücretsiz Hesap</a>
+        </div>
+        <ul>
+            <li><a href="anasayfa.html" class="active"></a>Ana Sayfa</li>
+            <li><a href="disney.html" class="active"></a>Disney</li>
+            <li><a href="netflix.html" class="active"></a>Netflix</li>
+            <li><a href="method.html" class="active"></a>Method</li>
+            <li><a href="karısık.html" class="active"></a>Karışık</li>
+        </ul>
+    </div>
+    <div class="center">
+        <h1>Hesap Paylaşım Sitesine Hoşgeldiniz </h1>
+        <h3>Paylaşılan hesaplara sağ üst köşedeki "Disney","Netflix","Method" ve </h3>
+        <h3>daha fazla içerikleri görebilmek için karışık seçeneğine tıklayınız.İYİ FORUMLAR :D</h3>
+    </div>
+   </div>
+
+</body>
+</html> 
