--- a/method.html
+++ b/method.html
@@ -21,10 +21,7 @@
         </ul>
     </div>
     <div class="center">
-        <h1>Hesap Paylaşım Sitesine Hoşgeldiniz </h1>
-        <h3>Paylaşılan hesaplara sağ üst köşedeki "Disney","Netflix","Method" ve </h3>
-        <h3>daha fazla içerikleri görebilmek için karışık seçeneğine tıklayınız.İYİ FORUMLAR :D</h3>
-    </div>
+        <h4>INSTAGRAM TÜM FORUMLAR: https://ay.live/g0je </h4>
    </div>
 
 </body>
