--- a/netflix.html
+++ b/netflix.html
@@ -21,9 +21,7 @@
         </ul>
     </div>
     <div class="center">
-        <h1>Hesap Paylaşım Sitesine Hoşgeldiniz </h1>
-        <h3>Paylaşılan hesaplara sağ üst köşedeki "Disney","Netflix","Method" ve </h3>
-        <h3>daha fazla içerikleri görebilmek için karışık seçeneğine tıklayınız.İYİ FORUMLAR :D</h3>
+        <h4>5000x NETLFİX COOKİE: https://ay.live/0bCPk</h4>
     </div>
    </div>
 
