--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <h1>Hesap Paylaşım Sitesine Hoşgeldiniz </h1>
         <h3>Paylaşılan hesaplara sağ üst köşedeki "Disney","Netflix","Method" ve </h3>
         <h3>daha fazla içerikleri görebilmek için karışık seçeneğine tıklayınız.İYİ FORUMLAR :D</h3>
+
+        <h3>(Mobil cihazlara uyum en yakın zamanda eklenicektir.)</h3>
     </div>
    </div>
 
