--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
         <ul>
             <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
-            <li><a href="disney.html" class="active">Disney</a></li>
-            <li><a href="netflix.html" class="active">Netflix</a></li>
-            <li><a href="method.html" class="active">Method</a></li>
-            <li><a href="karısık.html" class="active">Karışık</a></li>
+            <li><a href="disney.html" >Disney</a></li>
+            <li><a href="netflix.html" >Netflix</a></li>
+            <li><a href="method.html" >Method</a></li>
+            <li><a href="karısık.html">Karışık</a></li>
         </ul>
     </div>
     <div class="center">
