--- a/karısık.html
+++ b/karısık.html
@@ -14,13 +14,13 @@
         <div class="ucretsizhesap">
             <a href="">Ücretsiz Hesap</a>
         </div>
-        <ul>
-            <li><a href="anasayfa.html" class="active"></a>Ana Sayfa</li>
-            <li><a href="disney.html" class="active"></a>Disney</li>
-            <li><a href="netflix.html" class="active"></a>Netflix</li>
-            <li><a href="method.html" class="active"></a>Method</li>
-            <li><a href="karısık.html" class="active"></a>Karışık</li>
-        </ul>
+            <ul>
+                <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
+                <li><a href="disney.html" >Disney</a></li>
+                <li><a href="netflix.html" >Netflix</a></li>
+                <li><a href="method.html" >Method</a></li>
+                <li><a href="karısık.html">Karışık</a></li>
+            </ul>
     </div>
     <div class="center">
         <h4>NORD VPN HESAPLARI: https://ay.live/3yTM8E</h4>
