--- a/disney.html
+++ b/disney.html
@@ -22,7 +22,9 @@
         </ul>
     </div>
     <div class="center">
-           <p>DİSNEY HESAPLAR: https://ay.live/yJATa</p> 
+           <p>
+            <b>DİSNEY HESAPLAR:</b> https://ay.live/yJATa
+        </p> 
     </div>
    </div>
 
