--- a/method.html
+++ b/method.html
@@ -22,7 +22,10 @@
         </ul>
     </div>
     <div class="center">
-        <h4>INSTAGRAM TÜM FORUMLAR: https://ay.live/g0je </h4>
+        <p>
+            <b>INSTAGRAM TÜM FORUMLAR:</b> https://ay.live/g0je 
+
+        </p>
    </div>
 
 </body>
