--- a/disney.html
+++ b/disney.html
@@ -23,7 +23,8 @@
     </div>
     <div class="center">
            <p>
-            <b>DİSNEY HESAPLAR:</b>  https://ay.live/yJATa
+            <b>DİSNEY HESAPLAR:</b> <a href=" https://ay.live/yJATa">"">TIKLA<"</a>
+           
         </p> 
     </div>
    </div>
