--- a/disney.html
+++ b/disney.html
@@ -23,7 +23,7 @@
     </div>
     <div class="center">
            <p>
-            <b>DİSNEY HESAPLAR:</b> <a href=" https://ay.live/yJATa">"">TIKLA<"</a>
+            <b>DİSNEY HESAPLAR:</b> <a href=" https://ay.live/yJATa"> →TIKLA</a>
            
         </p> 
     </div>
