--- a/karısık.html
+++ b/karısık.html
@@ -24,7 +24,8 @@
     </div>
     <div class="center">
         <p>
-            <b>NORD VPN HESAPLARI: </b>https://ay.live/3yTM8E
+            <b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a>
+
 
         </p>
    </div>
