--- a/method.html
+++ b/method.html
@@ -23,7 +23,8 @@
     </div>
     <div class="center">
         <p>
-            <b>INSTAGRAM TÜM FORUMLAR:</b> https://ay.live/g0je 
+            <b>INSTAGRAM TÜM FORUMLAR:</b>  <a href="https://ay.live/g0je">→TIKLA</a>
+
 
         </p>
    </div>
