--- a/netflix.html
+++ b/netflix.html
@@ -23,7 +23,7 @@
     </div>
     <div class="center">
         <p>
-            <b> 5000x NETLFİX COOKİE: </b><a href="https://ay.live/0bCPk">tıkla</a>
+            <b> 5000x NETLFİX COOKİE: </b><a href="https://ay.live/0bCPk">→TIKLA</a>
 
 
         </p>
