--- a/karısık.html
+++ b/karısık.html
@@ -24,8 +24,8 @@
     </div>
     <div class="center">
         <p>
+            <b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a>
             <b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a>
-
 
         </p>
    </div>
