--- a/method.html
+++ b/method.html
@@ -23,6 +23,9 @@
     </div>
     <div class="center">
         <p>
+            <b>FAKE NO ALMA 4Ü 1 ARADA:</b>  <a href="https://ay.live/AG6b6Q">→TIKLA</a>
+            <b>Ücretsiz 0850 Numara Alma 2023:</b>  <a href="https://ay.live/ibLCi">→TIKLA</a>
+            <b>MARTI 30TL METHOD:</b>  <a href="https://ay.live/Ic9E">→TIKLA</a>
             <b>INSTAGRAM TÜM FORUMLAR:</b>  <a href="https://ay.live/g0je">→TIKLA</a>
 
 
