--- a/karısık.html
+++ b/karısık.html
@@ -23,11 +23,11 @@
             </ul>
     </div>
     <div class="center">
-        <p>
-            <b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a>
-            <b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a>
+        <p> <b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a></p>
+        
+        <p>  <b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a></p>
 
-        </p>
+        
    </div>
 
 </body>
