--- a/disney.html
+++ b/disney.html
@@ -13,6 +13,10 @@
         <div class="ucretsizhesap">
             <a href="">Ücretsiz Hesap</a>
         </div>
+        <input type="checkbox" id="menuBtn">
+        <label for="menuBtn" class="menuBtn">
+            ≡
+        </label>
         <ul>
             <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
             <li><a href="disney.html" >Disney</a></li>
