--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <div class="ucretsizhesap">
             <a href="">Ücretsiz Hesap</a>
         </div>
+        <input type="checkbox" id="menuBtn">
+        <label for="menuBtn" class="menuBtn">
+            ≡
+        </label>
         <ul>
             <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
             <li><a href="disney.html" >Disney</a></li>
@@ -25,11 +29,7 @@
         <h1>Hesap Paylaşım Sitesine Hoşgeldiniz </h1>
         <h3>Paylaşılan hesaplara sağ üst köşedeki "Disney","Netflix","Method" ve </h3>
         <h3>daha fazla içerikleri görebilmek için karışık seçeneğine tıklayınız.İYİ FORUMLAR :D</h3>
-
-        <h3>(Mobil cihazlara uyum en yakın zamanda eklenicektir.)</h3>
     </div>
-   </div>
-
 </body>
 </html> 
 
