--- a/karısık.html
+++ b/karısık.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ücretsiz Hesap</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +13,11 @@
         <div class="ucretsizhesap">
             <a href="">Ücretsiz Hesap</a>
         </div>
-            <ul>
+        <input type="checkbox" id="menuBtn">
+        <label for="menuBtn" class="menuBtn">
+            ≡
+        </label>
+        <ul>
                 <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
                 <li><a href="disney.html" >Disney</a></li>
                 <li><a href="netflix.html" >Netflix</a></li>
