--- a/netflix.html
+++ b/netflix.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ücretsiz Hesap</title>
     <link rel="stylesheet" href="style.css">
@@ -13,6 +13,10 @@
         <div class="ucretsizhesap">
             <a href="">Ücretsiz Hesap</a>
         </div>
+        <input type="checkbox" id="menuBtn">
+        <label for="menuBtn" class="menuBtn">
+            ≡
+        </label>
         <ul>
             <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
             <li><a href="disney.html" >Disney</a></li>
