--- a/disney.html
+++ b/disney.html
@@ -27,6 +27,7 @@
     </div>
     <div class="center">
            <p>
+            <b>DİSNEY HESAP 1x:</b> <a href="https://ay.live/aXusZ"> →TIKLA</a>
             <b>DİSNEY HESAPLAR:</b> <a href=" https://ay.live/yJATa"> →TIKLA</a>
            
         </p> 
