--- a/karısık.html
+++ b/karısık.html
@@ -26,6 +26,7 @@
             </ul>
     </div>
     <div class="center">
+        <p> <b>BLU TV HESAP 2X: </b><a href="https://ay.live/KBrzc">→TIKLA</a></p>
         <p> <b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a></p>
         <P> </P>
         <p>  <b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a></p>
