--- a/netflix.html
+++ b/netflix.html
@@ -27,7 +27,7 @@
     </div>
     <div class="center">
         
-        <p><b>1x NETLFİX COOKİE</b> <a href="https://ay.live/m0SO">→TIKLA</a> </p>
+        <p><b>1x NETLFİX COOKİE</b> <i>13/06/23</i><a href="https://ay.live/m0SO">→TIKLA</a> </p>
         <p>    <b> 5000x NETLFİX COOKİE: </b><a href="https://ay.live/0bCPk">→TIKLA</a> </p>
 
 
