--- a/karısık.html
+++ b/karısık.html
@@ -26,6 +26,7 @@
             </ul>
     </div>
     <div class="center">
+        <p> <b> 132 Level AP Sunucu 34 Skinli Valorant Hesap</b><i>13/06/23</i><a href="https://ay.live/jnBh5H">→TIKLA</a></p>
         <p> <b>BLU TV HESAP 2X: </b><i>13/06/23</i><a href="https://ay.live/KBrzc">→TIKLA</a></p>
         <p> <b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a></p>
         <P> </P>
