--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     </div>
     <div class="center">
         <h1>Hesap Paylaşım Sitesine Hoşgeldiniz </h1>
-        <h3>Paylaşılan hesaplara sağ üst köşedeki "Disney","Netflix","Method" ve </h3>
-        <h3>daha fazla içerikleri görebilmek için karışık seçeneğine tıklayınız.İYİ FORUMLAR :D</h3>
+        <h3>Hesaplara ulaşmak için 3 çizgiye basmanız yeterli.</h3>
     </div>
 </body>
 </html> 
