--- a/karısık.html
+++ b/karısık.html
@@ -25,14 +25,11 @@
                 <li><a href="karısık.html">Karışık</a></li>
             </ul>
     </div>
-    <div class="center">
-        <p> <b> 132 Level AP Sunucu 34 Skinli Valorant Hesap</b><i>13/06/23</i><a href="https://ay.live/jnBh5H">→TIKLA</a></p>
-        <p> <b>BLU TV HESAP 2X: </b><i>13/06/23</i><a href="https://ay.live/KBrzc">→TIKLA</a></p>
-        <p> <b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a></p>
-        <P> </P>
-        <p>  <b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a></p>
-
-        
+    <div class="ol">
+         <b> 132 Level AP Sunucu 34 Skinli Valorant Hesap</b><i>13/06/23</i><a href="https://ay.live/jnBh5H">→TIKLA</a>
+         <b>BLU TV HESAP 2X: </b><i>13/06/23</i><a href="https://ay.live/KBrzc">→TIKLA</a>
+         <b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a>       
+        <b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a>
    </div>
 
 </body>
