--- a/karısık.html
+++ b/karısık.html
@@ -26,11 +26,14 @@
             </ul>
     </div>
     <div class="ol">
-         <b> 132 Level AP Sunucu 34 Skinli Valorant Hesap</b><i>13/06/23</i><a href="https://ay.live/jnBh5H">→TIKLA</a>
-         <b>BLU TV HESAP 2X: </b><i>13/06/23</i><a href="https://ay.live/KBrzc">→TIKLA</a>
-         <b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a>       
-        <b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a>
-   </div>
-
+        <ol>
+            <li><b> 132 Level AP Sunucu 34 Skinli Valorant Hesap</b><i>13/06/23</i><a href="https://ay.live/jnBh5H">→TIKLA</a></li>
+            <li><b>BLU TV HESAP 2X: </b><i>13/06/23</i><a href="https://ay.live/KBrzc">→TIKLA</a></li>
+            <li><b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a>   </li>    
+            <li><b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a></li>
+        </ol>
+    </div>
+        
 </body>
 </html> 
+
