--- a/netflix.html
+++ b/netflix.html
@@ -25,15 +25,13 @@
             <li><a href="karısık.html">Karışık</a></li>
         </ul>
     </div>
-    <div class="center">
-        
-        <p><b>1x NETLFİX COOKİE</b> <i>13/06/23</i><a href="https://ay.live/m0SO">→TIKLA</a> </p>
-        <p>    <b> 5000x NETLFİX COOKİE: </b><a href="https://ay.live/0bCPk">→TIKLA</a> </p>
+    <div class="ol">
+        <ol>
+            <li><p><b>1x NETLFİX COOKİE</b> <i>13/06/23</i><a href="https://ay.live/m0SO">→TIKLA</a> </p></li>
+            <li><p><b> 5000x NETLFİX COOKİE: </b><a href="https://ay.live/0bCPk">→TIKLA</a> </p></li>
+        </ol>
 
-
-        
     </div>
-   </div>
 
 </body>
 </html> 
