--- a/anasayfa.html
+++ b/anasayfa.html
@@ -25,9 +25,13 @@
             <li><a href="karısık.html">Karışık</a></li>
         </ul>
     </div>
-    <div class="center">
-        <h1>Hesap Paylaşım Sitesine Hoşgeldiniz </h1>
-        <h3>Hesaplara ulaşmak için 3 çizgiye basmanız yeterli.</h3>
+    <div class="ol3">
+        <ol>
+            <li><a> <strong>Hesap Paylaşım Sitesine Hoşgeldiniz</strong> </a></li>
+            <li><b>Paylaşılan hesaplara sağ üst köşedeki "Disney","Netflix","Method" ve daha</b></li>
+            <li><b> fazla içerikleri görebilmek için karışık seçeneğine tıklayınız.</b></li>
+            <li><b>İYİ FORUMLAR :D</b></li>
+        </ol>
     </div>
 </body>
 </html> 
