--- a/disney.html
+++ b/disney.html
@@ -27,6 +27,8 @@
         </div>
         <div class="ol">
             <ol>
+                <li> <b>DİSNEY HESAP 1x:</b> <i>13/06/23</i><a href=""> →TIKLA</a></p> </li>
+                <li><b>DİSNEY HESAPLAR:</b> <a href=" https://ay.live/yJATa"> →TIKLA</a></p> </li>
                 <li> <b>DİSNEY HESAP 1x:</b> <i>13/06/23</i><a href="https://ay.live/aXusZ"> →TIKLA</a></p> </li>
                 <li><b>DİSNEY HESAPLAR:</b> <a href=" https://ay.live/yJATa"> →TIKLA</a></p> </li>
 
