--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <div class="container">
     <div class="navbar">
         <div class="ucretsizhesap">
-            <a href="">Ücretsiz Hesap</a>
+            <a href="">🌐Ücretsiz Hesap</a>
         </div>
         <input type="checkbox" id="menuBtn">
         <label for="menuBtn" class="menuBtn">
