--- a/anasayfa.html
+++ b/anasayfa.html
@@ -18,7 +18,7 @@
             ≡
         </label>
         <ul>
-            <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
+            <li><a href="anasayfa.html" class="active">⌂Ana Sayfa</a></li>
             <li><a href="disney.html" >Disney</a></li>
             <li><a href="netflix.html" >Netflix</a></li>
             <li><a href="method.html" >Method</a></li>
