--- a/anasayfa.html
+++ b/anasayfa.html
@@ -19,7 +19,7 @@
         </label>
         <ul>
             <li><a href="anasayfa.html" class="active">⌂Ana Sayfa</a></li>
-            <li><a href="disney.html" ><img src="disney.png" alt="">Disney</a></li>
+            <li><a href="disney.html" >Disney</a></li>
             <li><a href="netflix.html" >Netflix</a></li>
             <li><a href="method.html" >Method</a></li>
             <li><a href="karısık.html">Karışık</a></li>
