--- a/karısık.html
+++ b/karısık.html
@@ -11,14 +11,14 @@
    <div class="container">
     <div class="navbar">
         <div class="ucretsizhesap">
-            <a href="">Ücretsiz Hesap</a>
+            <a href="">🌐Ücretsiz Hesap</a>
         </div>
         <input type="checkbox" id="menuBtn">
         <label for="menuBtn" class="menuBtn">
             ≡
         </label>
         <ul>
-                <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
+                <li><a href="anasayfa.html" class="active">⌂ Ana Sayfa</a></li>
                 <li><a href="disney.html" >Disney</a></li>
                 <li><a href="netflix.html" >Netflix</a></li>
                 <li><a href="method.html" >Method</a></li>
