--- a/disney.html
+++ b/disney.html
@@ -28,10 +28,9 @@
         <div class="kutu">
             <div class="baslik">Disney</div>
             <div class="ol">
-                <li> <b>DİSNEY HESAPlar:</b> <i>13/06/23</i><a href=""> →TIKLA</a></p> </li>
-                <li><b>DİSNEY HESAPLAR:</b> <a href=" https://ay.live/yJATa"> →TIKLA</a></p> </li>
+                <li><b>DİSNEY HESAPLAR:</b> <i>13/06/23</i><a href=" https://ay.live/yJATa"> →TIKLA</a></p> </li>
                 <li> <b>DİSNEY HESAPlar:</b> <i>13/06/23</i><a href="https://ay.live/aXusZ"> →TIKLA</a></p> </li>
-                <li><b>DİSNEY HESAPLAR:</b> <a href=" https://ay.live/yJATa"> →TIKLA</a></p> </li>
+                <li><b>DİSNEY HESAPLAR:</b> <i>13/06/23</i><a href=" https://ay.live/yJATa"> →TIKLA</a></p> </li>
 
             </ol>
         </div>
