--- a/disney.html
+++ b/disney.html
@@ -30,7 +30,7 @@
             <div class="ol">
             <ol>
                 <li><b>DİSNEY HESAPLAR:</b> <i>13/06/23</i><a href=" https://ay.live/yJATa"> →TIKLA</a></p></li>
-                <li><b>DİSNEY HESAPlar:</b> <i>13/06/23</i><a href="https://ay.live/aXusZ"> →TIKLA</a></p></li>
+                <li><b>DİSNEY HESAPLAR:</b> <i>13/06/23</i><a href="https://ay.live/aXusZ"> →TIKLA</a></p></li>
                 <li><b>DİSNEY HESAPLAR:</b> <i>13/06/23</i><a href=" https://ay.live/yJATa"> →TIKLA</a></p></li>
 
             </ol>
