--- a/method.html
+++ b/method.html
@@ -36,9 +36,13 @@
             <li><p>  <b>INSTAGRAM TÜM FORUMLAR:</b>  <a href="https://ay.live/g0je">→TIKLA</a></p></li> 
       </ol>  
         
-
-        
    </div>
+
+   <div class="kutu2">
+    <div class="baslik">Duyuru</div>
+    <div class="ol">
+        <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
+</div>
 
 </body>
 </html> 
