--- a/disney.html
+++ b/disney.html
@@ -36,6 +36,11 @@
             </ol>
         </div>
    </div>
-
+   
+   <div class="kutu2">
+    <div class="baslik">Duyuru</div>
+    <div class="ol">
+        <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
+</div>
 </body>
 </html> 
