--- a/karısık.html
+++ b/karısık.html
@@ -25,7 +25,9 @@
                 <li><a href="karısık.html">Karışık</a></li>
             </ul>
     </div>
-    <div class="ol">
+    <div class="kutu">
+        <div class="baslik">Karışık</div>
+        <div class="ol">
         <ol>
             <li><b>VALORANT SKİNLİ HESAP/1</b><i>16/06/23</i><a href="https://ay.live/nMsr9">→TIKLA</a></li>
             <li><b>VALORANT ASİL BALTA VANDAL ETC.</b><i>16/06/23</i><a href="https://ay.live/D4UWb">→TIKLA</a></li>
@@ -35,13 +37,10 @@
             <li><b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a></li>
         </ol>
     </div>
-        
     <div class="kutu2">
         <div class="baslik">Duyuru</div>
         <div class="ol">
             <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
-    </div> 
-    
 </body>
 </html> 
 
