--- a/method.html
+++ b/method.html
@@ -25,6 +25,8 @@
             <li><a href="karısık.html">Karışık</a></li>
         </ul>
     </div>
+    <div class="kutu">
+        <div class="baslik">Method</div>
     <div class="ol">
       <ol>
             <li> <b>FAKE NO ALMA 4Ü 1 ARADA:</b>  <a href="https://ay.live/AG6b6Q">→TIKLA</a></p></li> 
