--- a/netflix.html
+++ b/netflix.html
@@ -25,7 +25,9 @@
             <li><a href="karısık.html">Karışık</a></li>
         </ul>
     </div>
-    <div class="ol">
+    <div class="kutu">
+        <div class="baslik">Netflix</div>
+        <div class="ol">
         <ol>
             <li><p><b>1x NETLFİX COOKİE</b> <i>13/06/23</i><a href="https://ay.live/m0SO">→TIKLA</a> </p></li>
             <li><p><b> 5000x NETLFİX COOKİE: </b><a href="https://ay.live/0bCPk">→TIKLA</a> </p></li>
@@ -38,6 +40,6 @@
         <div class="ol">
             <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
     </div>
-    
+
 </body>
 </html> 
