--- a/netflix.html
+++ b/netflix.html
@@ -38,7 +38,7 @@
     <div class="kutu2">
         <div class="baslik">Duyuru</div>
         <div class="ol">
-            <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
+            <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kismindan anliyabilirsiniz.</p>
     </div>
 
 </body>
