--- a/karısık.html
+++ b/karısık.html
@@ -41,6 +41,7 @@
         <div class="baslik">Duyuru</div>
         <div class="ol">
             <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
+        </div>
 </body>
 </html> 
 
