--- a/netflix.html
+++ b/netflix.html
@@ -35,5 +35,11 @@
 
     </div>
 
+    <div class="kutu2">
+        <div class="baslik">Duyuru</div>
+        <div class="ol">
+            <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
+    </div>
+    
 </body>
 </html> 
