--- a/netflix.html
+++ b/netflix.html
@@ -29,8 +29,8 @@
         <div class="baslik">Netflix</div>
         <div class="ol">
         <ol>
-            <li><p><b>1x NETLFİX COOKİE</b> <i>13/06/23</i><a href="https://ay.live/m0SO">→TIKLA</a> </p></li>
-            <li><p><b> 5000x NETLFİX COOKİE: </b><a href="https://ay.live/0bCPk">→TIKLA</a> </p></li>
+            <li><p><b>NETLFİX COOKİE</b> <i>13/06/23</i><a href="https://ay.live/m0SO">→TIKLA</a> </p></li>
+            <li><p><b>5000x NETLFİX COOKİE: </b><a href="https://ay.live/0bCPk">→TIKLA</a> </p></li>
         </ol>
 
     </div>
@@ -40,6 +40,6 @@
         <div class="ol">
             <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
     </div>
-    
+
 </body>
 </html> 
