--- a/karısık.html
+++ b/karısık.html
@@ -37,6 +37,13 @@
             <li><b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a></li>
         </ol>
     </div>
+
+    <div class="kutu2">
+        <div class="baslik">Duyuru</div>
+        <div class="ol">
+            <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
+    </div>
+    
 </body>
 </html> 
 
