--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
     </div>
 </html> 
 
+<div class="kutu2">
+    <div class="baslik">Duyuru</div>
+    <div class="ol">
+        <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
+</div>
+
 
 
 
