--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
         <div class="ol">
             <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
     </div>
-   
+</body>
 </html> 
-
 
 
 
