--- a/karısık.html
+++ b/karısık.html
@@ -29,10 +29,10 @@
         <div class="baslik">Karışık</div>
         <div class="ol">
         <ol>
-            <li><b>VALORANT SKİNLİ HESAP/1</b><i>16/06/23</i><a href="https://ay.live/nMsr9">→TIKLA</a></li>
+            <li><b>VALORANT SKİNLİ HESAP</b><i>16/06/23</i><a href="https://ay.live/nMsr9">→TIKLA</a></li>
             <li><b>VALORANT ASİL BALTA VANDAL ETC.</b><i>16/06/23</i><a href="https://ay.live/D4UWb">→TIKLA</a></li>
             <li><b> 132 Level AP Sunucu 34 Skinli Valorant Hesap</b><i>13/06/23</i><a href="https://ay.live/jnBh5H">→TIKLA</a></li>
-            <li><b>BLU TV HESAP 2X: </b><i>13/06/23</i><a href="https://ay.live/KBrzc">→TIKLA</a></li>
+            <li><b>BLU TV HESAP : </b><i>13/06/23</i><a href="https://ay.live/KBrzc">→TIKLA</a></li>
             <li><b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a>   </li>    
             <li><b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a></li>
         </ol>
