--- a/karısık.html
+++ b/karısık.html
@@ -29,6 +29,8 @@
         <div class="baslik">Karışık</div>
         <div class="ol">
         <ol>
+            <li><b>110xBLU TV </b><i>18/06/23</i><a href="https://ay.live/aX5D">→TIKLA</a></li>
+            <li><b>İP TV </b><i>18/06/23</i><a href="https://ay.live/ifMl">→TIKLA</a></li>
             <li><b>VALORANT SKİNLİ HESAP</b><i>16/06/23</i><a href="https://ay.live/nMsr9">→TIKLA</a></li>
             <li><b>VALORANT ASİL BALTA VANDAL ETC.</b><i>16/06/23</i><a href="https://ay.live/D4UWb">→TIKLA</a></li>
             <li><b> 132 Level AP Sunucu 34 Skinli Valorant Hesap</b><i>13/06/23</i><a href="https://ay.live/jnBh5H">→TIKLA</a></li>
