--- a/netflix.html
+++ b/netflix.html
@@ -29,6 +29,7 @@
         <div class="baslik">Netflix</div>
         <div class="ol">
         <ol>
+            <li><p><b>NETLFİX COOKİE UHD</b> <i>18/06/23</i><a href="https://ay.live/U5Kf">→TIKLA</a> </p></li>
             <li><p><b>NETLFİX COOKİE</b> <i>13/06/23</i><a href="https://ay.live/m0SO">→TIKLA</a> </p></li>
             <li><p><b>5000x NETLFİX COOKİE: </b><a href="https://ay.live/0bCPk">→TIKLA</a> </p></li>
         </ol>
