--- a/karısık.html
+++ b/karısık.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <footer class="footer">
+        <p>&copy; Made By Berta</p>
+            </footer>
    <div class="container">
     <div class="navbar">
         <div class="ucretsizhesap">
